fixing responsiveness bug

--- a/index.html
+++ b/index.html
@@ -3,25 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Khand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Overlock:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Telex&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css" type="text/css">
-    <title>PeerVest</title>
+    <title>PeerVest Tech</title>
 </head>
 <body>
-    <div class="main-container">
-        <video autoplay loop muted plays-inline class="back-video">
+    <section class="main-container">
+        <video autoplay loop muted plays-inline>
             <source src='asset/video.mp4' type="video/mp4">
           </video>
         <div class="bg-wrapper">
-            <h1>
-                A mission to right the future
-            </h1>
+            <h1>A mission to right the future</h1>
             <h2>
-                Sorry! We are under reconstruction
+                Our new site is on its way. Stay Tuned!
                 <span><img alt="under-construction" src="asset/reshot-icon-construction-crane-E4AZX5DNLY.svg" /> </span>
             </h2>
-            <p>Check back with us later</p>
-                <a href="mailto:projects@peervest.tech?subject = Feedback&info = Message">Connect with us</a>
+            
+            <div class="paragraph">
+                <p>Peervest.Tech is a unique team of experience professionals and creatives who use their talents and skills to empower businesses to succeed from ideation to start-up/enterprise - into the future.
+                <br />
+                <br />
+                We build products from vision, transform teams and processes, establish a brand, or provide support from the back end.
+                <br />
+                <br />
+                Want to build your next product and drive growth? Then...</p>
+            </div> 
+            <a href="mailto:projects@peervest.tech?subject = Feedback&info = Message" class="button">Connect with us</a>
         </div>
-    </div>
+    </section>
 </body>
 </html>
