--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <source src='asset/video.mp4' type="video/mp4">
           </video>
         <div class="bg-wrapper">
-            <h1>A mission to right the future</h1>
+            <h1>You've just found your product team</h1>
             <h2>
                 Our new site is on its way. Stay Tuned!
                 <span><img alt="under-construction" src="asset/reshot-icon-construction-crane-E4AZX5DNLY.svg" /> </span>
