font-weight change

--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;523&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;423&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" type="text/css">
     <title>PeerVest Tech</title>
 </head>
 <body>
     <section class="main-container">
-        <video autoplay loop muted plays-inline>
-            <source src='asset/video.mp4' type="video/mp4">
+        <video src="asset/video.mp4" type="video/mp4" autoplay loop muted plays-inline>
           </video>
         <div class="bg-wrapper">
             <h1>You've just found your product team</h1>
@@ -22,13 +18,9 @@
             </h2>
             
             <div class="paragraph">
-                <p>Peervest.Tech is a unique team of experience professionals and creatives who use their talents and skills to empower businesses to succeed from ideation to start-up/enterprise - into the future.
-                <br />
-                <br />
-                We build products from vision, transform teams and processes, establish a brand, or provide support from the back end.
-                <br />
-                <br />
-                Want to build your next product and drive growth? Then...</p>
+                <p>Peervest.Tech is a unique team of experience professionals and creatives who use their talents and skills to empower businesses to succeed from ideation to start-up/enterprise - into the future. </p>
+                <p>We build products from vision, transform teams and processes, establish a brand, or provide support from the back end.</p>
+                <p>Want to build your next product and drive growth? Then...</p>
             </div> 
             <a href="mailto:projects@peervest.tech?subject = Feedback&info = Message" class="button">Connect with us</a>
         </div>
